@@ -1,42 +1,103 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'application'
+    id 'org.beryx.jlink' version '3.0.1'
     id 'io.github.jwharm.flatpak-gradle-generator' version '1.2.0'
+    id 'io.github.crimix.replace-placeholders' version '2.0'
 }
 
-group = 'com.toxicstoxm'
-version = '0.1.4'
-var mainClass = group + "." + name + ".LEDSuite"
+if ("@ID@".endsWith("@")) {
+    group = 'com.toxicstoxm.LEDSuite'
+    version = '1.0.0-rc1'
+} else {
+    group = '@ID@'
+    version = '@VERSION@'
+}
 
 repositories {
     maven { url './offline-repository/' }
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    implementation 'org.fusesource.jansi:jansi:2.4.1'
-    implementation 'io.github.jwharm.javagi:adw:0.10.2'
-    implementation 'org.apache.commons:commons-configuration2:2.11.0'
+    implementation 'io.github.jwharm.javagi:adw:0.11.0'
+
     implementation 'org.yaml:snakeyaml:2.3'
+
+    implementation 'jakarta.websocket:jakarta.websocket-client-api:2.2.0'
+    implementation 'org.glassfish.tyrus:tyrus-client:2.2.0'
+    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:2.2.0'
+
+    compileOnly 'org.jetbrains:annotations:26.0.1'
+    annotationProcessor 'org.jetbrains:annotations:26.0.1'
+
+    implementation 'com.toxicstoxm.YAJSI:YAJSI:1.6.4'
+    implementation 'com.toxicstoxm.YAJL:YAJL:1.4.3'
 
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
-    implementation 'info.picocli:picocli:4.7.6'
-    annotationProcessor 'info.picocli:picocli:4.7.6'
+    implementation 'io.github.classgraph:classgraph:4.8.179'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-// copy the Constants class and replace the version placeholder with the application version
-tasks.register("processVersion", Copy) {
-    from("src/main/java/com/toxicstoxm/LEDSuite/") {
-        include("Constants.java")
-        filter(ReplaceTokens, tokens: ['version': version])
-    }
-    into layout.buildDirectory.dir("generated/sources/classes/src/java/main/com/toxicstoxm/LEDSuite/")
 
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(23)
+    }
+}
+
+tasks.named('test', Test) {
+    useJUnitPlatform()
+
+    maxHeapSize = '1G'
+
+    testLogging {
+        events "passed"
+    }
+}
+
+tasks.register('glibCompileResources') {
+    doLast {
+        exec {
+            workingDir 'src/main/resources'
+            commandLine 'glib-compile-resources', 'LEDSuite.gresource.xml'
+        }
+    }
+}
+
+tasks.named('classes') {
+    dependsOn glibCompileResources
+}
+
+application {
+    mainClass = 'com.toxicstoxm.LEDSuite.Main'
+    mainModule = 'com.toxicstoxm.LEDSuite'
+    applicationDefaultJvmArgs = [
+            '--enable-native-access=org.gnome.glib',
+            '--enable-native-access=org.gnome.gobject',
+            '--enable-native-access=org.gnome.gio',
+            '--enable-native-access=org.gnome.gdk',
+            '--enable-native-access=org.gnome.gtk',
+            '--enable-native-access=org.gnome.adw',
+            '--enable-native-access=org.freedesktop.cairo',
+            '--enable-native-access=com.toxicstoxm.LEDSuite'
+    ]
+}
+
+jlink {
+    options = [
+            '--strip-debug',
+            '--no-header-files',
+            '--no-man-pages'
+    ]
+    launcher {
+        name = 'LEDSuite'
+    }
 }
 
 tasks.flatpakGradleGenerator {
@@ -44,28 +105,27 @@ tasks.flatpakGradleGenerator {
     downloadDirectory = './offline-repository'
 }
 
-// exclude the original Constants class from the source set so gradle doesn't compile it in
-sourceSets {
-    main {
-        java {
-            exclude ("com/toxicstoxm/LEDSuite/Constants.java")
-        }
-    }
-}
-
-// include the new Constants class that was previously generated
-tasks.named("compileJava", JavaCompile) {
-    dependsOn("processVersion")
-    source(layout.buildDirectory.dir("generated/sources/classes/src/java/main/com/toxicstoxm/LEDSuite/"))
-}
-
-shadowJar {
-    archiveClassifier.set('final')
+replaceSourcePlaceholders {
+    enabled true
+    filesToExpand '**/LEDSuiteApplication.java'
+    extraProperties 'version'
 }
 
 tasks.jar {
+    dependsOn('fatJar')
     manifest {
-        attributes["Main-Class"] = mainClass;
+        attributes['Main-Class'] = 'com.toxicstoxm.LEDSuite.Main'
     }
-    dependsOn("shadowJar")
+}
+
+tasks.register('fatJar', Jar) {
+    manifest {
+        attributes['Main-Class'] = 'com.toxicstoxm.LEDSuite.Main'
+    }
+
+    archiveBaseName = "${rootProject.name}-fat"
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
